# axum-backend

./: Cargo.toml  README.md
.sqlx/: query-246197ec1584c5509a49d85fe24eb0bb680c594d528c63a31f80a2240f02278d.json  query-374db2dd80ec99ee7e578829526e8793387fb47e77b301e2be1f5092f3ebe49d.json  query-42d6b7aa93a3afec6c3bf09f6c780a4458215e57db09cd85d60a2fb06adbb21a.json  query-4bf8c191a52c16254080c1973a504a97c38e633e86a57861fc1128e751ca667f.json  query-4c3bc0bab9c64a955e1356aab7a3f0ae2b58530d1e126872bcdce088e6b2a8fc.json  query-75e9f19f2eb9b59e73795dec36fc0a1d45ba97a9dd554b0f677989e2a0c009ab.json  query-76f6ba6fe8be46a82ba19642e8969ecde2de23ef432738c29747d33d35c51467.json  query-8ec8e181e99fb7722f6fed454eed001ec29b8d25b412ddcddc4c1ee4eb879a13.json  query-9b446860e8e7794d237a80de7cbe34e964ddbc47b1dc945619bd2ca865ae08de.json  query-a70fe38e739b0859a152a55b57afcdb5f38bbb149904bddabf712bca1dd1246e.json  query-b0ba8d4f4c7114785b2d26d12a651384cd26c966278947850bb21c61cf53171a.json  query-fbd874de6ac732b522452e65d059ebd98b45972f7f6053a6397b83ab1e1ece99.json  query-fc353de698f279a836867b2dce1818d5f8167676d9796edc2eb1dea0852906de.json  query-fcb551ff206e2bf125ef7f16a8d9357d6b701bf86ecb9be86d22e3e51f22aef6.json
database/: README.md  docker-compose.yaml
migrations/: 20260411195708_create_users.sql  20260618143245_email-otp.sql  20260618161851_refresh-token.sql  20260619020000_password-resets.sql  20260619090000_password-resets-token-hash-index.sql  20260619090100_refresh-token-revocation.sql  20260619093000_password-resets-otp-and-attempts.sql  20260628173000_add_used_at_to_email_otp.sql  20260628173500_add_resend_fields_to_email_otp.sql  20260628174000_add_resend_fields_to_password_resets.sql  (+1 more)
src/: lib.rs  main.rs
src/app/: mod.rs
(+126 files in other folders)
