[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
