[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = [
    "runtime-tokio", # Async runtime
    "postgres",      # DB Driver
    "macros",        # Enables query!() macro
    "uuid",          # Support for UUID primary keys
    "chrono",        # Support for timestamps
    "migrate",       # Built-in migration runner
] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "1.0.69"
argon2 = { version = "0.5", features = ["password-hash"] }
validator = { version = "0.20.0", features = ["derive"] }
rand = "0.9.0"
lettre = { version = "0.11", features = [
    "tokio1-native-tls",
    "builder",
    "smtp-transport",
] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
sha2 = "0.11.0"
axum-extra = { version = "0.12.6", features = ["cookie"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1.2"
